--- a/views/partials/adminheader.hbs
+++ b/views/partials/adminheader.hbs
@@ -92,19 +92,7 @@
                 </div>
             </li>
 
-            {{!-- <!-- Nav Item - Charts -->
-            <li class="nav-item active">
-                <a class="nav-link" href="charts.html">
-                    <i class="fas fa-fw fa-chart-area"></i>
-                    <span>Charts</span></a>
-            </li>
-
-            <!-- Nav Item - Tables -->
-            <li class="nav-item">
-                <a class="nav-link" href="tables.html">
-                    <i class="fas fa-fw fa-table"></i>
-                    <span>Tables</span></a>
-            </li> --}}
+           
 
             <!-- Divider -->
             <hr class="sidebar-divider d-none d-md-block">
@@ -160,12 +148,13 @@
                                 <form class="form-inline mr-auto w-100 navbar-search">
                                     <div class="input-group">
                                         <input type="text" class="form-control bg-light border-0 small"
-                                            placeholder="Search for..." aria-label="Search"
+                                            placeholder="Search for..." aria-label="Search" value="{{data}}"
                                             aria-describedby="basic-addon2">
                                         <div class="input-group-append">
-                                            <button class="btn btn-primary" type="button">
+                                            <a href="/admin/searchuser"> <button class="btn btn-primary" type="submit">
                                                 <i class="fas fa-search fa-sm"></i>
-                                            </button>
+                                            </button></a>
+                                           
                                         </div>
                                     </div>
                                 </form>
@@ -315,7 +304,7 @@
                                     Activity Log
                                 </a>
                                 <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="#" data-toggle="modal" data-target="#logoutModal">
+                                <a class="dropdown-item" href="/admin/logout" data-toggle="modal" data-target="#logoutModal">
                                     <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
                                     Logout
                                 </a>
