--- a/views/admin/searchuser.hbs
+++ b/views/admin/searchuser.hbs
@@ -9,7 +9,17 @@
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 
 
-{{> adminheader}}
+{{!--
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <!-- Include Bootstrap CSS -->
+
+</head> --}}
 
 <body>
     <table class="table">
@@ -18,7 +28,6 @@
                 <th>Name</th>
                 <th>Email</th>
                 <th>phoneNo</th>
-
                 <th>Status</th>
             </tr>
         </thead>
