--- a/views/layouts/layout.hbs
+++ b/views/layouts/layout.hbs
@@ -21,6 +21,8 @@
       <link href="/css/style.css" rel="stylesheet" />
       <!-- responsive style -->
       <link href="/css/responsive.css" rel="stylesheet" />
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha384-xrRvZVit5AOcB9m5eA2FjJjHgHY7I5ruf58Qx4QmCTA6ayq2YxOqnuvqS3dmoE" crossorigin="anonymous">
+
       
    </head>
    <body>
