--- a/views/users/cart.hbs
+++ b/views/users/cart.hbs
@@ -31,16 +31,17 @@
                                         </div>
                                         <div class="col-md-3 col-lg-3 col-xl-2 d-flex">
                                             <a href="/users/cart/qtyminus/{{this.product._id}}" class="btn-link px-2"
-                                                onclick="stepDownValue(this)">
-                                                <i class="fas fa-minus"></i>
+                                                onclick="stepDownValue(this)"> -
+                                                {{!-- <i class="fas fa-minus"></i> --}}
                                             </a>
 
 
                                             <input id="form1" min="0" name="quantity" value={{this.quantity}}
-                                                type="number" class="form-control form-control-sm" />
+                                                type="text" class="form-control form-control-sm" />
 
                                             <a href="/users/cart/qtyadd/{{this.product._id}}" class="btn-link px-2" onclick="stepUpValue(this)">
-                                                <i class="fas fa-plus"></i>
+                                                {{!-- <i class="fas fa-plus"></i> --}}
+                                                +
                                             </a>
 
                                         </div>
