--- a/views/admin/edituser.hbs
+++ b/views/admin/edituser.hbs
@@ -90,3 +90,25 @@
 
 
 </form>
+  <!-- Include jQuery -->
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"
+        integrity="sha256-oa5io9gszzQSg3cF0NmOafHTs6+cmTuxU+oUDgZ1zBo=" crossorigin="anonymous"></script>
+
+    <!-- Include Bootstrap JS (bundle) -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-iVXEAgQCBQNOf0l4GqjXgF5f5I5/GyZgTCsCCnbKd8rPZPFF73VS9wbF5Yx1PiF"
+        crossorigin="anonymous"></script>
+</body>
+
+<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+<script>
+    // Check if jQuery is defined before using it
+    if (window.jQuery) {
+        $(function () {
+            $(".dropdown-menu").on('click', 'a', function () {
+                $(this).parents('.dropdown').find('button').text($(this).text());
+            });
+        });
+    }
+
+</script>
