--- a/views/admin/orders.hbs
+++ b/views/admin/orders.hbs
@@ -1,11 +1,10 @@
-
- <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
-      <!-- font awesome style -->
-      <link href="css/font-awesome.min.css" rel="stylesheet" />
-      <!-- Custom styles for this template -->
-      <link href="css/style.css" rel="stylesheet" />
-      <!-- responsive style -->
-      <link href="css/responsive.css" rel="stylesheet" />
+{{!-- <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
+<!-- font awesome style -->
+<link href="css/font-awesome.min.css" rel="stylesheet" />
+<!-- Custom styles for this template -->
+<link href="css/style.css" rel="stylesheet" />
+<!-- responsive style -->
+<link href="css/responsive.css" rel="stylesheet" />
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 
@@ -14,33 +13,48 @@
 <!-- Include Bootstrap JS (bundle) without integrity attribute -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous"> --}}
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-      
-      <body>
+
+<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+
+<!-- Include Bootstrap JS (bundle) without integrity attribute -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+
+<body>
     <table class="table">
         <thead>
             <tr>
-                <th>Image</th>
-                <th>Product Name</th>
-                <th>Quantity</th>
-                <th>Price</th>
+                <th>Name</th>
+                <th>Product</th>
                 <th>Category</th>
+                <th>City</th>
+                <th>Pincode</th>
+                <th>Price</th>
+                <th>Total</th>
                 <th>Actions</th>
             </tr>
         </thead>
         <tbody>
-            {{#each data}}
+            {{#each orders}}
             <tr>
                 {{!-- <th scope="row">{{this.productname}}</th> --}}
-                <td>
+                {{!-- <td>
                     <li>
-                    <img src="uploads/{{this.image}}" style="height:60px;,width:60px;" />
-                  </li>
-                </td>
-                <td>{{this.productname}}</td>
-                <td>{{this.quantity}}</td>
-                <td>{{this.price}}</td>
-                <td>{{this.category}}</td>
+                        <img src="uploads/{{this.image}}" style="height:60px;,width:60px;" />
+                    </li>
+                </td> --}}
+                <td>{{name}}</td>
+                <td></td>
+                <td>{{category}}</td>
+                <td>{{city}}</td>
+                <td>{{pincode}}</td>
+                <td>{{price}}</td>
+                <td>{{total}}</td>
+               
                 <td>
                     <div class="dropdown">
                         <button class="btn btn-outline-secondary dropdown-toggle" type="button" data-toggle="dropdown"
@@ -48,13 +62,10 @@
                             More
                         </button>
                         <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                            <a class="dropdown-item" href="/admin/edit_product/{{this._id}}">Edit</a>
-                            <a class="dropdown-item" href="/admin/products/deleteproduct/{{this._id}}"
-                                onclick="return confirm('Are you want to Delete ?')">
-                                <i class="bx bx-trash me-1"></i> Delete</a>
-                            
-                           
-
+                            <a class="dropdown-item" href="/admin/confirm/{{_id}}">Confirm</a>
+                            <a class="dropdown-item" href="/admin/shipped/{{_id}}"> Shipped</a>
+                            <a class="dropdown-item" href="/admin/delivered/{{_id}}"> Delivered</a>
+                            <a class="dropdown-item" href="/admin/cancelled/{{_id}}"> Cancelled</a>
                         </div>
                     </div>
                 </td>
@@ -63,7 +74,7 @@
         </tbody>
     </table>
 
-      <!-- Include jQuery -->
+     <!-- Include jQuery -->
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"
         integrity="sha256-oa5io9gszzQSg3cF0NmOafHTs6+cmTuxU+oUDgZ1zBo=" crossorigin="anonymous"></script>
 
