--- a/views/partials/adminheader.hbs
+++ b/views/partials/adminheader.hbs
@@ -1,4 +1,11 @@
  <!-- Sidebar -->
+       <link
+        href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
+        rel="stylesheet">
+
+
+    <!-- Custom styles for this template-->
+    <link href="css/sb-admin-2.min.css" rel="stylesheet">
         <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
 
             <!-- Sidebar - Brand -->
@@ -38,7 +45,7 @@
                     <div class="bg-white py-2 collapse-inner rounded">
                         {{!-- <h6 class="collapse-header">Custom Components:</h6> --}}
                         <a class="collapse-item" href="/admin/alluser">All Users</a>
-                        <a class="collapse-item" href="/admin/alluser">Edit Users</a>
+                        <a class="collapse-item" href="/admin/order">Edit Users</a>
                     </div>
                 </div>
             </li>
