--- a/views/partials/userheader.hbs
+++ b/views/partials/userheader.hbs
@@ -1,7 +1,7 @@
 <header class="header_section">
     <div class="container">
         <nav class="navbar navbar-expand-lg custom_nav-container ">
-            <a class="navbar-brand" href="index.html"><img width="250" src="images/logo.png" alt="#" /></a>
+            <a class="navbar-brand" href="index.html"><img width="250" src="/images/logo.png" alt="#" /></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class=""> </span>
@@ -120,6 +120,8 @@
                             <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
                                 {{!-- <a class="dropdown-item" href="#">PROFILE</a> --}}
                                 <a class="dropdown-item" href="/users/cart">CARTS</a>
+                                 <a class="dropdown-item" href="/users/orders">My Orders</a>
+
                                 <a class="dropdown-item" href="/users/logout">LOGOUT</a>
                             </div>
                         </div>
