--- a/views/users/cart.hbs
+++ b/views/users/cart.hbs
@@ -1,7 +1,13 @@
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-<link href="stylesheets/style.css" rel="stylesheet" />
+<link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
+<!-- font awesome style -->
+<link href="css/font-awesome.min.css" rel="stylesheet" />
+<!-- Custom styles for this template -->
+<link href="css/style.css" rel="stylesheet" />
+<!-- responsive style -->
+<link href="css/responsive.css" rel="stylesheet" />
+<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
 
+{{> userheader}}
 <section class="h-100 h-custom" style="background-color: #d2c9ff;">
     <div class="container py-5 h-100">
         <div class="row d-flex justify-content-center align-items-center h-100">
@@ -18,7 +24,6 @@
                                     <hr class="my-4">
                                     {{#if data.items.length}}
                                     {{#each data.items}}
-                                    {{!-- {{#each products}} --}}
 
                                     <div class="row mb-4 d-flex justify-content-between align-items-center">
                                         <div class="col-md-2 col-lg-2 col-xl-2">
@@ -29,27 +34,30 @@
                                             <h6 class="text-muted">{{this.product.category}}</h6>
                                             <h6 class="text-black mb-0">{{this.product.productname}}</h6>
                                         </div>
+
+
                                         <div class="col-md-3 col-lg-3 col-xl-2 d-flex">
-                                            <a href="/users/cart/qtyminus/{{this.product._id}}" class="btn-link px-2"
-                                                onclick="stepDownValue(this)"> -
+                                            <a href="/users/cart/qtyminus/{{this.product._id}} "
+                                                class="btn-link px-2 btn-minus" data-productid="{{this.product._id}}"> -
                                                 {{!-- <i class="fas fa-minus"></i> --}}
                                             </a>
-
-
-                                            <input id="form1" min="0" name="quantity" value={{this.quantity}}
-                                                type="text" class="form-control form-control-sm" />
-
-                                            <a href="/users/cart/qtyadd/{{this.product._id}}" class="btn-link px-2" onclick="stepUpValue(this)">
-                                                {{!-- <i class="fas fa-plus"></i> --}}
+                                            <input id="quantityLink_{{this.product._id}}" id="" min="0" name="quantity"
+                                                value={{this.quantity}} type="text"
+                                                class="form-control form-control-sm" />
+                                            <a href="/users/cart/qtyadd/{{this.product._id}}"
+                                                class="btn-link px-2 btn-add" data-productid="{{this.product._id}}">
                                                 +
                                             </a>
+
+
 
                                         </div>
                                         <div class="col-md-3 col-lg-2 col-xl-2 offset-lg-1">
                                             <h6 class="mb-0">{{this.product.price}}</h6>
                                         </div>
                                         <div class="col-md-1 col-lg-1 col-xl-1 text-end">
-                                            <a href="/users/cart/delete/{{this.product._id}}" class="text-muted"><i class="fas fa-times"></i></a>
+                                            <a href="/users/cart/delete/{{this.product._id}}" class="text-muted"><i
+                                                    class="fas fa-times"></i></a>
                                         </div>
                                     </div>
 
@@ -73,7 +81,7 @@
 
                                     <div class="d-flex justify-content-between mb-4">
                                         <h5 class="text-uppercase">count:{{count}}</h5>
-                                        <h5>Rs:{{data.totalPrice}}</h5>
+                                        <h5 id="totpriceLink">Rs:{{data.totalPrice}}</h5>
                                     </div>
 
                                     <h5 class="text-uppercase mb-3">Shipping</h5>
@@ -91,7 +99,7 @@
 
                                     <div class="d-flex justify-content-between mb-5">
                                         <h5 class="text-uppercase">Total price</h5>
-                                        <h5>Rs:{{total}}</h5>
+                                        <h5 id="totlink">Rs:{{total}}</h5>
                                     </div>
                                     <a href="/users/checkout">
                                         <button type="submit" class="btn btn-dark btn-block btn-lg"
@@ -110,19 +118,58 @@
     </div>
 </section>
 
+
+<script src="js/jquery-3.4.1.min.js"></script>
+<!-- popper js -->
+<script src="js/popper.min.js"></script>
+<!-- bootstrap js -->
+<script src="js/bootstrap.js"></script>
+<!-- custom js -->
+<script src="js/custom.js"></script>
+<!-- Inside the <head> section -->
+
+<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+
+
 <script>
-    function stepDownValue(element) {
-        var inputElement = element.parentNode.querySelector('input[type=number]');
-        if (inputElement) {
-            inputElement.stepDown();
-        }
-    }
+    $(document).ready(function () {
+        $('.btn-minus').click(function (e) {
+            e.preventDefault();
+            var productId = $(this).data('productid')
+            var uniqueId = 'quantityLink_' + productId;
+            $.ajax({
+                type: 'GET',
+                url: '/users/cart/qtyminus/' + productId,
+                success: function (response) {
+                    $('#' + uniqueId).val(response.quantity);
+                    $('#totpriceLink').text('Rs: ' + response.totalPrice);
+                    $('#totlink').text('Rs: ' + (response.totalPrice + 40));
+                },
+                error: function (error) {
+                    console.error(error);
+                }
+            });
+        });
+    });
 </script>
 <script>
-    function stepUpValue(element) {
-        var inputElement = element.parentNode.querySelector('input[type=number]');
-        if (inputElement) {
-            inputElement.stepUp();
-        }
-    }
+    $(document).ready(function () {
+        $('.btn-add').click(function (e) {
+            e.preventDefault();
+            var productId = $(this).data('productid');
+            var uniqueId = 'quantityLink_' + productId;
+            $.ajax({
+                type: 'GET',
+                url: '/users/cart/qtyadd/' + productId,
+                success: function (response) {
+                    $('#' + uniqueId).val(response.quantity);
+                    $('#totpriceLink').text('Rs: ' + response.totalPrice);
+                    $('#totlink').text('Rs: ' + (response.totalPrice + 40));
+                },
+                error: function (error) {
+                    console.error(error);
+                }
+            });
+        });
+    });
 </script>
