--- a/views/users/allproducts.hbs
+++ b/views/users/allproducts.hbs
@@ -72,7 +72,7 @@
                             <a href="/users/addcart/{{this._id}}" class="option1">
                                 Add To Cart
                             </a>
-                            <a href="/users/{{this._id}}" class="option2">
+                            <a href="/users/moredetails/{{this._id}}" class="option2">
                                 View Details
                             </a>
                         </div>
