--- a/views/admin/orders.hbs
+++ b/views/admin/orders.hbs
@@ -29,11 +29,11 @@
         <thead>
             <tr>
                 <th>Name</th>
-                <th>Product</th>
-                <th>Category</th>
+                <th>Address</th>
                 <th>City</th>
+                <th>State</th>
                 <th>Pincode</th>
-                <th>Price</th>
+                <th>Phone No</th>
                 <th>Total</th>
                 <th>Actions</th>
             </tr>
@@ -48,11 +48,11 @@
                     </li>
                 </td> --}}
                 <td>{{name}}</td>
-                <td></td>
-                <td>{{category}}</td>
+                <td>{{address}}</td>
                 <td>{{city}}</td>
+                <td>{{state}}</td>
                 <td>{{pincode}}</td>
-                <td>{{price}}</td>
+                <td>{{phoneno}}</td>
                 <td>{{total}}</td>
                
                 <td>
