--- a/views/partials/userheader.hbs
+++ b/views/partials/userheader.hbs
@@ -9,7 +9,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav">
                     <li class="nav-item active">
-                        <a class="nav-link" href="users/chart ">Home <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="/ ">Home <span class="sr-only">(current)</span></a>
                     </li>
                     {{!-- <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" role="button"
@@ -119,8 +119,11 @@
 
                             <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
                                 {{!-- <a class="dropdown-item" href="#">PROFILE</a> --}}
+                                <a class="dropdown-item" href="/users/profile">View Profile</a>
                                 <a class="dropdown-item" href="/users/cart">CARTS</a>
                                  <a class="dropdown-item" href="/users/orders">My Orders</a>
+                                <a class="dropdown-item" href="/users/changepassword">Change Password</a>
+
 
                                 <a class="dropdown-item" href="/users/logout">LOGOUT</a>
                             </div>
