--- a/views/index.hbs
+++ b/views/index.hbs
@@ -393,7 +393,7 @@
 <!-- end arrival section -->
 
 <!-- product section -->
-<section class="product_section layout_padding">
+{{!-- <section class="product_section layout_padding">
     <div class="container" id="product">
         <div class="heading_container heading_center">
             <h2>
@@ -706,6 +706,47 @@
             <a href="/users/allproducts">
                 View All products
             </a>
+        </div>
+    </div>
+</section> --}}
+<section class="product_section layout_padding">
+    <div class="container" id="product">
+        <div class="heading_container heading_center">
+            <h2>
+                Our <span>products</span>
+            </h2>
+        </div>
+        <div class="row">
+            {{#each data}}
+
+            <div class="col-sm-6 col-md-4 col-lg-4">
+                <div class="box">
+                    <div class="option_container">
+                        <div class="options">
+                            <a href="/users/addcart/{{this._id}}" class="option1">
+                                Add To Cart
+                            </a>
+                            <a href="/users/moredetails/{{this._id}}" class="option2">
+                                View Details
+                            </a>
+                        </div>
+                    </div>
+                    <div class="img-box">
+                        <img src="../uploads/{{this.image}}" alt="" style="width: fit-content">
+                    </div>
+                    <div class="detail-box">
+                        <h5>
+                            {{this.productname}}
+                        </h5>
+                        <h6>
+                            ${{this.price}}
+                        </h6>
+                    </div>
+                </div>
+            </div>
+            {{/each}}
+
+
         </div>
     </div>
 </section>
