--- a/views/partials/userheader.hbs
+++ b/views/partials/userheader.hbs
@@ -21,7 +21,7 @@
                         </ul>
                     </li> --}}
                     <li class="nav-item">
-                        <a class="nav-link" href="#product">Products</a>
+                        <a class="nav-link" href="/users/allproducts">Products</a>
                     </li>
                     {{!-- <li class="nav-item">
                         <a class="nav-link" href="blog_list.html">Blog</a>
