--- a/views/index.hbs
+++ b/views/index.hbs
@@ -748,6 +748,11 @@
 
 
         </div>
+        <div class="btn-box">
+            <a href="/users/allproducts1">
+                Our Premium Products
+            </a>
+        </div>
     </div>
 </section>
 <!-- end product section -->
