--- a/views/users/allproducts.hbs
+++ b/views/users/allproducts.hbs
@@ -90,10 +90,25 @@
                     </div>
                 </div>
             </div>
+            
             {{/each}}
+           
 
 
         </div>
+        <nav aria-label="Page navigation example">
+  <ul class="pagination justify-content-center">
+    <li class="page-item disabled">
+      {{!-- <a class="page-link" href="#" tabindex="-1">Previous</a> --}}
+    </li>
+    <li class="page-item"><a class="page-link" href="/users/allproducts1">1</a></li>
+    <li class="page-item"><a class="page-link" href="/users/allproducts2">2</a></li>
+    <li class="page-item"><a class="page-link" href="#">3</a></li>
+    <li class="page-item">
+      {{!-- <a class="page-link" href="#">Next</a> --}}
+    </li>
+  </ul>
+</nav>
     </div>
 </section>
 {{!--
