--- a/views/users/signup.hbs
+++ b/views/users/signup.hbs
@@ -38,7 +38,7 @@
                                     <div class="col-12">
                                         <label for="firstName" class="form-label">Name <span
                                                 class="text-danger">*</span></label>
-                                        <input type="text" class="form-control" name="name" id="name"
+                                        <input type="text" pattern="[A-Za-z]+" class="form-control" name="name" id="name"
                                             placeholder="Name" required>
                                     </div>
 
@@ -58,19 +58,19 @@
                                     <div class="col-12">
                                         <label for="lastName" class="form-label">Address <span
                                                 class="text-danger">*</span></label>
-                                        <input type="text" class="form-control" name="address" id="address"
+                                        <input type="text" class="form-control" pattern="[A-Za-z]+" name="address" id="address"
                                             placeholder="Address" required>
                                     </div>
                                     <div class="col-12">
                                         <label for="lastName" class="form-label">Phone No <span
                                                 class="text-danger">*</span></label>
-                                        <input type="tel" class="form-control" name="phone" 
+                                        <input type="tel" maxlength="10" class="form-control" name="phone" 
                                             placeholder="ph Number" required>
                                     </div>
                                     <div class="col-12">
                                         <label for="lastName" class="form-label">City <span
                                                 class="text-danger">*</span></label>
-                                        <input type="text" class="form-control" name="city" id="city"
+                                        <input type="text"pattern="[A-Za-z]+" class="form-control" name="city" id="city"
                                             placeholder="City" required>
                                     </div>
                                     
