--- a/views/partials/adminheader.hbs
+++ b/views/partials/adminheader.hbs
@@ -1,11 +1,16 @@
  <!-- Sidebar -->
-       <link
+        <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
+    <link
         href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
         rel="stylesheet">
 
-
     <!-- Custom styles for this template-->
     <link href="css/sb-admin-2.min.css" rel="stylesheet">
+
+  
+
+
+    <!-- Custom styles for this template-->
         <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
 
             <!-- Sidebar - Brand -->
@@ -45,7 +50,7 @@
                     <div class="bg-white py-2 collapse-inner rounded">
                         {{!-- <h6 class="collapse-header">Custom Components:</h6> --}}
                         <a class="collapse-item" href="/admin/alluser">All Users</a>
-                        <a class="collapse-item" href="/admin/order">Edit Users</a>
+                        {{!-- <a class="collapse-item" href="/admin/order">Edit Users</a> --}}
                     </div>
                 </div>
             </li>
@@ -63,7 +68,7 @@
                         {{!-- <h6 class="collapse-header">Custom Utilities:</h6> --}}
                         <a class="collapse-item" href="/admin/products">All Products</a>
                         <a class="collapse-item" href="/users/adminAddProduct">Add Products</a>
-                        <a class="collapse-item" href="utilities-animation.html">Edit Products</a>
+                        {{!-- <a class="collapse-item" href="utilities-animation.html">Edit Products</a> --}}
                         {{!-- <a class="collapse-item" href="utilities-other.html">Other</a> --}}
                     </div>
                 </div>
@@ -88,8 +93,8 @@
                     <div class="bg-white py-2 collapse-inner rounded">
                         {{!-- <h6 class="collapse-header">Login Screens:</h6> --}}
                         {{!-- <a class="collapse-item" href="login.html">Login</a> --}}
-                        <a class="collapse-item" href="forgot-password.html">All Orders</a>
-                        <a class="collapse-item" href="forgot-password.html">Payment</a>
+                        <a class="collapse-item" href="/admin/order">All Orders</a>
+                        {{!-- <a class="collapse-item" href="forgot-password.html">Payment</a> --}}
 
                         <div class="collapse-divider"></div>
                         {{!-- <h6 class="collapse-header">Other Pages:</h6>
@@ -298,20 +303,9 @@
                             <!-- Dropdown - User Information -->
                             <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in"
                                 aria-labelledby="userDropdown">
-                                <a class="dropdown-item" href="#">
-                                    <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>
-                                    Profile
-                                </a>
-                                <a class="dropdown-item" href="#">
-                                    <i class="fas fa-cogs fa-sm fa-fw mr-2 text-gray-400"></i>
-                                    Settings
-                                </a>
-                                <a class="dropdown-item" href="#">
-                                    <i class="fas fa-list fa-sm fa-fw mr-2 text-gray-400"></i>
-                                    Activity Log
-                                </a>
+                               
                                 <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="/admin/logout" data-toggle="modal" data-target="#logoutModal">
+                                <a class="dropdown-item" href="/admin/logout">
                                     <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
                                     Logout
                                 </a>
@@ -322,3 +316,19 @@
 
                 </nav>
                 <!-- End of Topbar -->
+                  <!-- Bootstrap core JavaScript-->
+    <script src="vendor/jquery/jquery.min.js"></script>
+    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+
+    <!-- Core plugin JavaScript-->
+    <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
+
+    <!-- Custom scripts for all pages-->
+    <script src="js/sb-admin-2.min.js"></script>
+
+    <!-- Page level plugins -->
+    <script src="vendor/chart.js/Chart.min.js"></script>
+
+    <!-- Page level custom scripts -->
+    <script src="js/demo/chart-area-demo.js"></script>
+    <script src="js/demo/chart-pie-demo.js"></script>
