--- a/views/users/cart.hbs
+++ b/views/users/cart.hbs
@@ -28,7 +28,7 @@
                                 <div class="p-5">
                                     <div class="d-flex justify-content-between align-items-center mb-5">
                                         <h1 class="fw-bold mb-0 text-black">Shopping Cart</h1>
-                                        <h6 class="mb-0 text-muted">{{count}}</h6>
+                                        <h6 class="mb-0 text-muted">{{count}} Items</h6>
                                     </div>
                                     <hr class="my-4">
                                     {{#if data.items.length}}
@@ -77,7 +77,7 @@
                                     <hr class="my-4">
 
                                     <div class="pt-5">
-                                        <h6 class="mb-0"><a href="/users/allproducts" class="text-body"><i
+                                        <h6 class="mb-0"><a href="/users/allproducts1" class="text-body"><i
                                                     class="fas fa-long-arrow-alt-left me-2"></i>Back to shop</a>
                                         </h6>
                                     </div>
