--- a/views/users/signup.hbs
+++ b/views/users/signup.hbs
@@ -58,7 +58,7 @@
                                     <div class="col-12">
                                         <label for="lastName" class="form-label">Address <span
                                                 class="text-danger">*</span></label>
-                                        <input type="text" class="form-control" pattern="[A-Za-z]+" name="address" id="address"
+                                        <input type="text" class="form-control"  name="address" id="address"
                                             placeholder="Address" required>
                                     </div>
                                     <div class="col-12">
