--- a/views/admin/charts.hbs
+++ b/views/admin/charts.hbs
@@ -28,7 +28,7 @@
     <div id="wrapper">
 
      
-                <!-- End of Topbar --> --}}
+                <!-- End of Topbar -->
                 {{> adminheader}}
 
                 <!-- Begin Page Content -->
