--- a/views/users/cart.hbs
+++ b/views/users/cart.hbs
@@ -48,9 +48,8 @@
                                         <div class="col-md-3 col-lg-3 col-xl-2 d-flex">
                                             <a href="/users/cart/qtyminus/{{this.product._id}} "
                                                 class="btn-link px-2 btn-minus" data-productid="{{this.product._id}}"> -
-                                                {{!-- <i class="fas fa-minus"></i> --}}
                                             </a>
-                                            <input id="quantityLink_{{this.product._id}}" id="" min="0" name="quantity"
+                                            <input id="quantityLink_{{this.product._id}}"  name="quantity"
                                                 value={{this.quantity}} type="text"
                                                 class="form-control form-control-sm" />
                                             <a href="/users/cart/qtyadd/{{this.product._id}}"
