--- a/views/index.hbs
+++ b/views/index.hbs
@@ -28,7 +28,7 @@
                                         veniam, vel architecto veritatis delectus repellat modi impedit sequi.
                                     </p>
                                     <div class="btn-box">
-                                        <a href="" class="btn1">
+                                        <a href="/users/allproducts1" class="btn1">
                                             Shop Now
                                         </a>
                                     </div>
