--- a/views/partials/userheader.hbs
+++ b/views/partials/userheader.hbs
@@ -37,7 +37,7 @@
                         </ul>
                     </li> --}}
                     <li class="nav-item">
-                        <a class="nav-link" href="/users/allproducts">Products</a>
+                        <a class="nav-link" href="/users/allproducts1">Products</a>
                     </li>
                     {{!-- <li class="nav-item">
                         <a class="nav-link" href="blog_list.html">Blog</a>
@@ -147,7 +147,7 @@
                     </a>
                     {{else}}
                     <a href="/users/login">
-                        <button class="btn-close btn text-danger">
+                        <button class="btn btn text-danger">
                             LOGIN
                         </button>
                     </a>
