--- a/views/users/checkout.hbs
+++ b/views/users/checkout.hbs
@@ -606,7 +606,7 @@
     function razorpay(order) {
         var options = {
             "key": "rzp_test_tnX1UxDN9JUK6D", // Enter the Key ID generated from the Dashboard
-            "amount": order.amount * 100, // Amount is in currency subunits. Default currency is INR. Hence, 50000 refers to 50000 paise
+            "amount": order.amount * 100, 
             "currency": "INR",
             "description": "Test Transaction",
             "image": "../public/uploads/1704708148013-Screenshot (42).png",
