--- a/views/users/orders.hbs
+++ b/views/users/orders.hbs
@@ -11,6 +11,8 @@
 </head>
 
 <body>
+            {{> userheader}}
+
     <div class="container mt-4">
         <div class="card">
             <div class="card-body">
