--- a/views/users/signup.hbs
+++ b/views/users/signup.hbs
@@ -55,7 +55,7 @@
                                             value="" required>
                                     </div>
 
-                                    <div class="col-12">
+                                    {{!-- <div class="col-12">
                                         <label for="lastName" class="form-label">Address <span
                                                 class="text-danger">*</span></label>
                                         <input type="text" class="form-control"  name="address" id="address"
@@ -72,7 +72,7 @@
                                                 class="text-danger">*</span></label>
                                         <input type="text"pattern="[A-Za-z]+" class="form-control" name="city" id="city"
                                             placeholder="City" required>
-                                    </div>
+                                    </div> --}}
                                     
                                     <div class="col-12">
                                         <div class="d-grid">
